paflou/parser.output
Nonterminals useless in grammar

    secondary_modifier
    object_access


Terminals unused in grammar

    RETURN
    VOID
    IF
    ELSE
    WHILE
    DO
    FOR
    SWITCH
    CASE
    DEFAULT
    BREAK
    TRUE
    FALSE
    INT
    CHAR
    BOOL
    STRING
    DOUBLE
    DOT


Rules useless in grammar

   14 secondary_modifier: ε
   15                   | DATATYPE
   16                   | VOID

   17 object_access: IDENT DOT IDENT


Grammar

    0 $accept: program $end

    1 program: ε
    2        | program class

    3 class: PUBLIC CLASS CLASS_NAME LCURLY variable_declaration method_declaration RCURLY

    4 variable_declaration: ε
    5                     | variable_declaration DATATYPE IDENT SEMICOLON
    6                     | variable_declaration PRIVATE DATATYPE IDENT SEMICOLON
    7                     | variable_declaration PUBLIC DATATYPE IDENT SEMICOLON
    8                     | variable_declaration object_creation

    9 modifier: ε
   10         | PUBLIC
   11         | PRIVATE

   12 object_creation: modifier CLASS_NAME IDENT EQUALS NEW CLASS_NAME LPAR RPAR SEMICOLON

   13 method_declaration: modifier


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    DATATYPE (258) 5 6 7
    NEW (259) 12
    RETURN (260)
    VOID (261)
    IF (262)
    ELSE (263)
    WHILE (264)
    DO (265)
    FOR (266)
    SWITCH (267)
    CASE (268)
    DEFAULT (269)
    BREAK (270)
    TRUE (271)
    FALSE (272)
    INT (273)
    CHAR (274)
    BOOL (275)
    STRING (276)
    DOUBLE (277)
    PRIVATE (278) 6 11
    PUBLIC (279) 3 7 10
    IDENT (280) 5 6 7 12
    LCURLY (281) 3
    RCURLY (282) 3
    CLASS (283) 3
    CLASS_NAME (284) 3 12
    LPAR (285) 12
    RPAR (286) 12
    DOT (287)
    SEMICOLON (288) 5 6 7 12
    EQUALS (289) 12


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    program (36)
        on left: 1 2
        on right: 0 2
    class (37)
        on left: 3
        on right: 2
    variable_declaration (38)
        on left: 4 5 6 7 8
        on right: 3 5 6 7 8
    modifier (39)
        on left: 9 10 11
        on right: 12 13
    object_creation (40)
        on left: 12
        on right: 8
    method_declaration (41)
        on left: 13
        on right: 3


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    2 program: program • class

    $end    shift, and go to state 2
    PUBLIC  shift, and go to state 3

    class  go to state 4


State 2

    0 $accept: program $end •

    $default  accept


State 3

    3 class: PUBLIC • CLASS CLASS_NAME LCURLY variable_declaration method_declaration RCURLY

    CLASS  shift, and go to state 5


State 4

    2 program: program class •

    $default  reduce using rule 2 (program)


State 5

    3 class: PUBLIC CLASS • CLASS_NAME LCURLY variable_declaration method_declaration RCURLY

    CLASS_NAME  shift, and go to state 6


State 6

    3 class: PUBLIC CLASS CLASS_NAME • LCURLY variable_declaration method_declaration RCURLY

    LCURLY  shift, and go to state 7


State 7

    3 class: PUBLIC CLASS CLASS_NAME LCURLY • variable_declaration method_declaration RCURLY

    $default  reduce using rule 4 (variable_declaration)

    variable_declaration  go to state 8


State 8

    3 class: PUBLIC CLASS CLASS_NAME LCURLY variable_declaration • method_declaration RCURLY
    5 variable_declaration: variable_declaration • DATATYPE IDENT SEMICOLON
    6                     | variable_declaration • PRIVATE DATATYPE IDENT SEMICOLON
    7                     | variable_declaration • PUBLIC DATATYPE IDENT SEMICOLON
    8                     | variable_declaration • object_creation

    DATATYPE  shift, and go to state 9
    PRIVATE   shift, and go to state 10
    PUBLIC    shift, and go to state 11

    $default  reduce using rule 9 (modifier)

    modifier            go to state 12
    object_creation     go to state 13
    method_declaration  go to state 14


State 9

    5 variable_declaration: variable_declaration DATATYPE • IDENT SEMICOLON

    IDENT  shift, and go to state 15


State 10

    6 variable_declaration: variable_declaration PRIVATE • DATATYPE IDENT SEMICOLON
   11 modifier: PRIVATE •

    DATATYPE  shift, and go to state 16

    $default  reduce using rule 11 (modifier)


State 11

    7 variable_declaration: variable_declaration PUBLIC • DATATYPE IDENT SEMICOLON
   10 modifier: PUBLIC •

    DATATYPE  shift, and go to state 17

    $default  reduce using rule 10 (modifier)


State 12

   12 object_creation: modifier • CLASS_NAME IDENT EQUALS NEW CLASS_NAME LPAR RPAR SEMICOLON
   13 method_declaration: modifier •

    CLASS_NAME  shift, and go to state 18

    $default  reduce using rule 13 (method_declaration)


State 13

    8 variable_declaration: variable_declaration object_creation •

    $default  reduce using rule 8 (variable_declaration)


State 14

    3 class: PUBLIC CLASS CLASS_NAME LCURLY variable_declaration method_declaration • RCURLY

    RCURLY  shift, and go to state 19


State 15

    5 variable_declaration: variable_declaration DATATYPE IDENT • SEMICOLON

    SEMICOLON  shift, and go to state 20


State 16

    6 variable_declaration: variable_declaration PRIVATE DATATYPE • IDENT SEMICOLON

    IDENT  shift, and go to state 21


State 17

    7 variable_declaration: variable_declaration PUBLIC DATATYPE • IDENT SEMICOLON

    IDENT  shift, and go to state 22


State 18

   12 object_creation: modifier CLASS_NAME • IDENT EQUALS NEW CLASS_NAME LPAR RPAR SEMICOLON

    IDENT  shift, and go to state 23


State 19

    3 class: PUBLIC CLASS CLASS_NAME LCURLY variable_declaration method_declaration RCURLY •

    $default  reduce using rule 3 (class)


State 20

    5 variable_declaration: variable_declaration DATATYPE IDENT SEMICOLON •

    $default  reduce using rule 5 (variable_declaration)


State 21

    6 variable_declaration: variable_declaration PRIVATE DATATYPE IDENT • SEMICOLON

    SEMICOLON  shift, and go to state 24


State 22

    7 variable_declaration: variable_declaration PUBLIC DATATYPE IDENT • SEMICOLON

    SEMICOLON  shift, and go to state 25


State 23

   12 object_creation: modifier CLASS_NAME IDENT • EQUALS NEW CLASS_NAME LPAR RPAR SEMICOLON

    EQUALS  shift, and go to state 26


State 24

    6 variable_declaration: variable_declaration PRIVATE DATATYPE IDENT SEMICOLON •

    $default  reduce using rule 6 (variable_declaration)


State 25

    7 variable_declaration: variable_declaration PUBLIC DATATYPE IDENT SEMICOLON •

    $default  reduce using rule 7 (variable_declaration)


State 26

   12 object_creation: modifier CLASS_NAME IDENT EQUALS • NEW CLASS_NAME LPAR RPAR SEMICOLON

    NEW  shift, and go to state 27


State 27

   12 object_creation: modifier CLASS_NAME IDENT EQUALS NEW • CLASS_NAME LPAR RPAR SEMICOLON

    CLASS_NAME  shift, and go to state 28


State 28

   12 object_creation: modifier CLASS_NAME IDENT EQUALS NEW CLASS_NAME • LPAR RPAR SEMICOLON

    LPAR  shift, and go to state 29


State 29

   12 object_creation: modifier CLASS_NAME IDENT EQUALS NEW CLASS_NAME LPAR • RPAR SEMICOLON

    RPAR  shift, and go to state 30


State 30

   12 object_creation: modifier CLASS_NAME IDENT EQUALS NEW CLASS_NAME LPAR RPAR • SEMICOLON

    SEMICOLON  shift, and go to state 31


State 31

   12 object_creation: modifier CLASS_NAME IDENT EQUALS NEW CLASS_NAME LPAR RPAR SEMICOLON •

    $default  reduce using rule 12 (object_creation)
